fixing alignment issues

--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -382,4 +382,7 @@
   .mobileVis{
     display: none;
   }
+  #howTrio {
+    margin-right:1em;
+  }
 }
